Decrease relevance of the person name on homepage. Fix hero on small screens.

--- a/contents/css/large.css
+++ b/contents/css/large.css
@@ -3,9 +3,9 @@
   line-height: inherit;
 }
 
-.home .header {
+/*.home .header {
   height: 540px;
-}
+}*/
 
 .article-headline {
   font-size: 80px;
@@ -19,8 +19,14 @@ h2 {
   font-size: 44px;
 }
 
+.emoji {
+  display: inline;
+}
 
 
+.home .header::before {
+  background-position: center top;
+}
 
 
 
